core-services/keycloak/templates/keycloak-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: keycloak
  name: keycloak
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak-http
spec:
  gateways:
    - istio-system/istio-ingressgateway
    - keycloak-gateway
  hosts:
    - keycloak.arielsofi.com
    - keycloak-http.keycloak.svc.cluster.local
    - keycloak-http.keycloak
    - keycloak-http.keycloak.svc
  http:
    - route:
        - destination:
            host: keycloak-0.keycloak.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - keycloak.arielsofi.com
        - keycloak.keycloak.svc.cluster.local
        - keycloak.keycloak
        - keycloak.keycloak.svc
